--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>University Tutor</h2>
-							<p>During my third year as a Bachelor at Sorbonne (from September 2023 to June 2024), for 2 hours weekly, I carried out tutoring sessions in Data science and Advanced mathematics for around twenty first-year students. I was working on the improvement of students' working methods and was constant searching for new teaching techniques</p>
+							<p>During my third year as a Bachelor at Sorbonne (from September 2023 to June 2024), for 2 hours weekly, I carried out tutoring sessions in Data science and Advanced mathematics for around twenty first-year students. I was working on the improvement of students' working methods and was constantly searching for new teaching techniques.</p>
 							
 						</div>
 						<div class="image">
