--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Olympic Family Assistant</h2>
-							<p>During the Paris 2024 Olympic Games, I accompanied an assigned member of the Olympic Family (IOC members, International Federations Presidents and Secretaries General and National Olympic Committees) on his/her activities, facilitating logistics and organization. I also provided linguistic assistance to the assigned member.</p>
+							<p>During the Paris 2024 Olympic Games, I will accompany an assigned member of the Olympic Family (IOC members, International Federations Presidents and Secretaries General and National Olympic Committees) on his/her activities, facilitating logistics and organization. I will also provide linguistic assistance to the assigned member.</p>
 							<ul class="actions stacked">
 								<li><a href="https://olympics.com/en/paris-2024/the-games/volunteers" class="button">Learn More</a></li>
 							</ul>
