--- a/index.html
+++ b/index.html
@@ -220,9 +220,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://www.instagram.com/ina_campan/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href = "https://github.com/inaelenacampan" class = "icon brands style2 fa-github"><span class = "label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/ina-campan/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:inacampan@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.instagram.com/ina_campan/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<p>&copy; inaelenacampan. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
