--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 								Recently, I have been improving my Spanish skills. Additionaly, I am a film photography enthusiast.</p>
 							
 							<ul class="actions stacked">
-								<li><a href="assets/download/CV_FR.pdf" class="button icon solid fa-download">French Resume</a></li>
-								<li><a href="assets/download/CV_EN.pdf" class="button icon solid fa-download">English Resume</a></li>
+								<li><a href="assets/download/CV_FR.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">French Resume</a></li>
+								<li><a href="assets/download/CV_EN.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">English Resume</a></li>
 							</ul>
 						
 						</div>
@@ -82,7 +82,7 @@
 							<h2>Olympic Family Assistant</h2>
 							<p>During the Paris 2024 Olympic Games, I will accompany an assigned member of the Olympic Family (IOC members, International Federations Presidents and Secretaries General and National Olympic Committees) on his/her activities, facilitating logistics and organization. I will also provide linguistic assistance to the assigned member.</p>
 							<ul class="actions stacked">
-								<li><a href="https://olympics.com/en/paris-2024/the-games/volunteers" class="button">Learn More</a></li>
+								<li><a href="https://olympics.com/en/paris-2024/the-games/volunteers" target = "_blank" rel = "noopener noreferrer" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -125,7 +125,7 @@
 					<!-- Gallery -->
 						<div class="gallery style2 medium lightbox onscroll-fade-in">
 							<article>
-								<a href="https://github.com/inaelenacampan/Tomographie_LU3IN003" class="image">
+								<a href="https://github.com/inaelenacampan/Tomographie_LU3IN003" target = "_blank" rel = "noopener noreferrer" class="image">
 									<img src="images/gallery/thumbs/p1.png" alt="" />
 								</a>
 								<div class="caption">
@@ -136,7 +136,7 @@
 								</div>
 							</article>
 							<article>
-								<a href="https://github.com/inaelenacampan/LU2IN013_Analyse_multidimensionnelle_des_preferences" class="image">
+								<a href="https://github.com/inaelenacampan/LU2IN013_Analyse_multidimensionnelle_des_preferences" target = "_blank" rel = "noopener noreferrer" class="image">
 									<img src="images/gallery/thumbs/p2.jpg" alt="" />
 								</a>
 								<div class="caption">
@@ -148,7 +148,7 @@
 								</div>
 							</article>
 							<article>
-								<a href="https://github.com/inaelenacampan/LU2IN006_ProjetGit" class="image">
+								<a href="https://github.com/inaelenacampan/LU2IN006_ProjetGit" target = "_blank" rel = "noopener noreferrer" class="image">
 									<img src="images/gallery/thumbs/p3.png" alt="" />
 								</a>
 								<div class="caption">
@@ -160,7 +160,7 @@
 								</div>
 							</article>
 							<article>
-								<a href="https://github.com/inaelenacampan/StageCompressionDeDonnees" class="image">
+								<a href="https://github.com/inaelenacampan/StageCompressionDeDonnees" target = "_blank" rel = "noopener noreferrer" class="image">
 									<img src="images/gallery/thumbs/p4.png" alt="" />
 								</a>
 								<div class="caption">
@@ -220,10 +220,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href = "https://github.com/inaelenacampan" class = "icon brands style2 fa-github"><span class = "label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/ina-campan/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:inacampan@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="https://www.instagram.com/ina_campan/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href = "https://github.com/inaelenacampan" target = "_blank" rel = "noopener noreferrer" class = "icon brands style2 fa-github"><span class = "label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ina-campan/" target = "_blank" rel = "noopener noreferrer" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:inacampan@gmail.com" target = "_blank" rel = "noopener noreferrer" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.instagram.com/ina_campan/" target = "_blank" rel = "noopener noreferrer" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<p>&copy; inaelenacampan. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
