--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 							<ul class="actions stacked">
 								<li><a href="https://olympics.com/en/paris-2024/the-games/volunteers" target = "_blank" rel = "noopener noreferrer" class="button">Learn More</a></li>
 							</ul>
+							<ul class="actions stacked">
+								<li><a href="https://drive.google.com/file/d/11xSEv0xfWxK7QSfehR8mF8b7dahimTl0/view?usp=sharing" target = "_blank" rel = "noopener noreferrer" class="button">Certificate</a></li>
+							</ul>
 						</div>
 						<div class="image">
 							<img src="images/volunteer.png" alt="" />
