--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								I consider myself a curious and hard-working learner. I do adapt rapidly to new environments and I am a native French and Romanian speaker, while also being proficient in English. 
 								Recently, I have been improving my Spanish skills. Additionaly, I am a film photography enthusiast.</p>
 							
-							<ul class="actions stacked">
+							<ul class="actions">
 								<li><a href="assets/download/CV_FR.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">French Resume</a></li>
 								<li><a href="assets/download/CV_EN.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">English Resume</a></li>
 							</ul>
@@ -81,10 +81,8 @@
 						<div class="content">
 							<h2>Olympic Family Assistant</h2>
 							<p>During the Paris 2024 Olympic Games, I accompanied an assigned member of the Olympic Family (IOC members, International Federations Presidents and Secretaries General and National Olympic Committees) on his/her activities, facilitating logistics and organization. I also provided linguistic assistance to the assigned member, Mr. Barry Hendricks (President of the South African Sports Confederation, Olympic and Paralympic Committee - SASCOC).</p>
-							<ul class="actions stacked">
+							<ul class="actions">
 								<li><a href="https://olympics.com/en/paris-2024/the-games/volunteers" target = "_blank" rel = "noopener noreferrer" class="button">Learn More</a></li>
-							</ul>
-							<ul class="actions stacked">
 								<li><a href="https://drive.google.com/file/d/11xSEv0xfWxK7QSfehR8mF8b7dahimTl0/view?usp=sharing" target = "_blank" rel = "noopener noreferrer" class="button">Certificate</a></li>
 							</ul>
 						</div>
