--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
 								<li><a href="mailto:inacampan@gmail.com" target = "_blank" rel = "noopener noreferrer" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://www.instagram.com/ina_campan/" target = "_blank" rel = "noopener noreferrer" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
-							<p>&copy; inaelenacampan. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; inaelenacampan. Design: <a href="https://html5up.net" target = "_blank" rel = "noopener noreferrer">HTML5 UP</a>.<br>
+							Portrait : &copy; <a href="https://blocquauxpro.com/" target = "_blank" rel = "noopener noreferrer">Vincent Blocquaux.</a> </p>
 						</div>
 					</footer>
 
