--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 								<li><a href="assets/download/CV_FR.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">French Resume</a></li>
 								<li><a href="assets/download/CV_EN.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">English Resume</a></li>
 							</ul>
+
+						<p><code>(Version : September 2024)</code>
 						
 						</div>
 						<div class="image">
