--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							</p>
 							<p>My passion for technology ignited during my high-school years and has since driven me to pursue a career in engineering and mathematics. I am particularly interested in data science, statistics, machine learning and artificial intelligence. 
 								I chanel my creativity in promoting the use of technology for social good and encouriging diversity in STEM fields. 
-								I consider myself a curious and hard-working learner. I do adapt rapidly to new environments and I am a native French and Romanian speaker, while also being proficient in English. 
+								I consider myself a curious and hard-working learner. I do adapt rapidly to new environments and I am a bilingual French and Romanian speaker, while also being proficient in English. 
 								Recently, I have been improving my Spanish skills. Additionaly, I am a film photography enthusiast.</p>
 							
 							<ul class="actions">
