adfaber_section_five

--- a/index.html
+++ b/index.html
@@ -130,6 +130,23 @@
 						</div>
 					</section>
 				
+				<!-- Five -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Volunteer for Adfaber (online)</h2>
+							<p>Adfaber, a Romanian NGO, believes in building communities through technology and is committed to helping people, especially young people, understand and learn how to use technology for a better life. During my second and third year as a Bachelor, I created courses (e.g. Introduction to programming) and online scientific workshops for Romanian high school students. I also participated as a judge in the international competition Technovation Girls (2023 edition).</p>
+							<ul class="actions">
+								<li><a href="assets/download/Judge_technovation.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">Judge certificate</a></li>
+								<li><a href="assets/download/Adfaber_certificate.pdf" class="button icon solid fa-download" target = "_blank" rel = "noopener noreferrer">Volunteer certificate</a></li>
+						</ul>
+						</div>
+
+						<div class="image">
+							<img src="images/adfaber.jpg" alt="" />
+						</div>
+
+					</section>
+				
 					<!-- Projects Gallery-->
 
 				<section class="wrapper style1 align-center">
