--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>My Portfolio</h1>
-							<p class="major">I am Ina Campan, a first-year student at ENSAE Paris ("Diplôme d'Ingénieur Grande École"), with a double bachelor in Mathematics and Computer Science from Sorbonne University, where I graduated with highest honors.
+							<p class="major">I am Ina Campan, a second-year student at ENSAE Paris ("Diplôme d'Ingénieur Grande École"), with a double bachelor in Mathematics and Computer Science from Sorbonne University, where I graduated with highest honors.
 							</p>
 							<p>My passion for technology ignited during my high-school years and has since driven me to pursue a career in engineering and mathematics. I am particularly interested in data science, statistics, machine learning and artificial intelligence. 
 								I chanel my creativity in promoting the use of technology for social good and encouriging diversity in STEM fields. 
@@ -276,4 +276,5 @@
 
 	</body>
 </html>
+
 
